--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-16 Sun 23:16]
+#+CAPTION: Clock summary at [2016-10-16 Sun 23:24]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *57:18* |       |       | 100.0 |
+| *Total time*                                                                | *57:25* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 57:18   |       |       | 100.0 |
-| Active                                                                      |         | 57:18 |       | 100.0 |
+| Stories                                                                     | 57:25   |       |       | 100.0 |
+| Active                                                                      |         | 57:25 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.8 |
@@ -34,7 +34,7 @@
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.0 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  20.7 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  20.6 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.6 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.2 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.1 |
@@ -46,7 +46,7 @@
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.5 |
 | COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.6 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.9 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  1:56 |   3.4 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  2:03 |   3.6 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-16 Sun 23:17]--[2016-10-16 Sun 23:24] =>  0:07
     CLOCK: [2016-10-16 Sun 22:53]--[2016-10-16 Sun 23:16] =>  0:23
     CLOCK: [2016-10-16 Sun 22:35]--[2016-10-16 Sun 22:52] =>  0:17
     CLOCK: [2016-10-16 Sun 21:28]--[2016-10-16 Sun 22:15] =>  0:47
