--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-16 Sun 23:24]
+#+CAPTION: Clock summary at [2016-10-16 Sun 23:31]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *57:25* |       |       | 100.0 |
+| *Total time*                                                                | *57:31* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 57:25   |       |       | 100.0 |
-| Active                                                                      |         | 57:25 |       | 100.0 |
+| Stories                                                                     | 57:31   |       |       | 100.0 |
+| Active                                                                      |         | 57:31 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.8 |
@@ -30,7 +30,7 @@
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   7.0 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.1 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  26.5 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  26.4 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.0 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
@@ -41,12 +41,12 @@
 | COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   2.9 |
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.6 |
 | COMPLETED Finish overwriting support                                        |         |       |  2:38 |   4.6 |
-| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   6.2 |
+| COMPLETED Remove service stereotype                                         |         |       |  3:32 |   6.1 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.5 |
 | COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.6 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.9 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  2:03 |   3.6 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  2:09 |   3.7 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-16 Sun 23:25]--[2016-10-16 Sun 23:31] =>  0:06
     CLOCK: [2016-10-16 Sun 23:17]--[2016-10-16 Sun 23:24] =>  0:07
     CLOCK: [2016-10-16 Sun 22:53]--[2016-10-16 Sun 23:16] =>  0:23
     CLOCK: [2016-10-16 Sun 22:35]--[2016-10-16 Sun 22:52] =>  0:17
