--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-16 Sun 23:32]
     CLOCK: [2016-10-16 Sun 23:25]--[2016-10-16 Sun 23:31] =>  0:06
     CLOCK: [2016-10-16 Sun 23:17]--[2016-10-16 Sun 23:24] =>  0:07
     CLOCK: [2016-10-16 Sun 22:53]--[2016-10-16 Sun 23:16] =>  0:23
