--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-17 Mon 00:05]
+#+CAPTION: Clock summary at [2016-10-17 Mon 00:21]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:04* |       |       | 100.0 |
+| *Total time*                                                                | *58:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:04   |       |       | 100.0 |
-| Active                                                                      |         | 58:04 |       | 100.0 |
+| Stories                                                                     | 58:19   |       |       | 100.0 |
+| Active                                                                      |         | 58:19 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.5 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.7 |
@@ -30,11 +30,11 @@
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.9 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.0 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  26.2 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  26.1 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.0 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.9 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  20.4 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  20.3 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.6 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.2 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.1 |
@@ -44,9 +44,9 @@
 | COMPLETED Remove service stereotype                                         |         |       |  3:32 |   6.1 |
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.5 |
-| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.6 |
+| COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.5 |
 | COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.8 |
-| STARTED Perform the archetype / artefact renames                            |         |       |  2:42 |   4.6 |
+| STARTED Perform the archetype / artefact renames                            |         |       |  2:57 |   5.1 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-17 Mon 00:06]--[2016-10-17 Mon 00:21] =>  0:15
     CLOCK: [2016-10-16 Sun 23:32]--[2016-10-17 Mon 00:05] =>  0:33
     CLOCK: [2016-10-16 Sun 23:25]--[2016-10-16 Sun 23:31] =>  0:06
     CLOCK: [2016-10-16 Sun 23:17]--[2016-10-16 Sun 23:24] =>  0:07
