--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -646,6 +646,7 @@ within the parser. It makes more sense to keep the parser clean and do
 the expansion somewhere else.
 
 *** STARTED Perform the archetype / artefact renames                  :story:
+    CLOCK: [2016-10-17 Mon 09:34]--[2016-10-17 Mon 09:46] =>  0:12
     CLOCK: [2016-10-17 Mon 09:20]--[2016-10-17 Mon 09:33] =>  0:13
     CLOCK: [2016-10-17 Mon 09:01]--[2016-10-17 Mon 09:19] =>  0:18
     CLOCK: [2016-10-17 Mon 00:27]--[2016-10-17 Mon 00:32] =>  0:05
